--- a/Auton/build.gradle
+++ b/Auton/build.gradle
@@ -6,12 +6,11 @@ java {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
 }
-
 repositories {
-    maven { url = 'https://maven.brott.dev/' }
+    maven {
+        url = 'https://maven.brott.dev/'
+    }
 }
-
 dependencies {
-    implementation 'com.acmerobotics.roadrunner:MeepMeep:0.1.6'
-    implementation project(':Auton')
+    implementation "com.acmerobotics.roadrunner:actions:1.0.0"
 }
